es-ingest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-ingest
  labels:
    component: elasticsearch
    role: ingest
spec:
  replicas: 2
  selector:
    matchLabels:
      component: elasticsearch
      role: ingest  
  template:
    metadata:
      labels:
        component: elasticsearch
        role: ingest
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: role
                operator: In
                values:
                - ingest
            topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: es/ingest
                operator: In
                values:
                - "true"   
      containers:
      - name: es-ingest
        image: quay.io/pires/docker-elasticsearch-kubernetes:6.3.2
        resources:
          requests:
            cpu: 0.25
          limits:
            cpu: 1
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 60
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
          failureThreshold: 10
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
          - name: "storage"
            hostPath:
              path: /data/es-ingest
