filebeat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-filebeat
  labels:
    app: busybox-filebeat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-filebeat
  template:
    metadata:
      labels:
        app: busybox-filebeat
    spec:
      containers:
      - name: busybox
        image: busybox:1.28
        command: 
        - /bin/sh 
        - -c
        - 'i=0; while true; do echo "$i: $(date)" >> /tmp/app.log; i=$((i+1)); sleep 5; done'
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
        volumeMounts:
        - name: share-dir
          mountPath: /tmp
      - name: filebeat
        image: 10.0.1.10:60080/beats/filebeat:5.6.16
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
        volumeMounts:
        - name: share-dir
          mountPath: /usr/share/filebeat/logs
        - name: filebeat-config
          mountPath: /usr/share/filebeat/filebeat.yml
          subPath: filebeat.yml
        securityContext:
          runAsUser: 0
      volumes:
        - name: share-dir
          emptyDir: {}
        - name: filebeat-config
          configMap:
            name: filebeat-config
