ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.kibana.com
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 80
